--- a/api/code/fileManager/transform/tsconfig.json
+++ b/api/code/fileManager/transform/tsconfig.json
@@ -1,7 +1,11 @@
 {
-  "extends": "../../../../tsconfig",
-  "references": [
-    { "path": "../../../../packages/api-file-manager" },
-    { "path": "../../../../packages/handler-aws" }
-  ]
+	"extends": "../../../../tsconfig",
+	"references": [
+		{
+			"path": "../../../../packages/api-file-manager"
+		},
+		{
+			"path": "../../../../packages/handler-aws"
+		}
+	]
 }
