--- a/api/code/graphqlPlayground/tsconfig.json
+++ b/api/code/graphqlPlayground/tsconfig.json
@@ -1,8 +1,17 @@
 {
-  "extends": "../../../tsconfig",
-  "references": [
-    { "path": "../../../packages/handler" },
-    { "path": "../../../packages/handler-aws" },
-    { "path": "../../../packages/handler-graphql-playground" }
-  ]
+	"extends": "../../../tsconfig",
+	"references": [
+		{
+			"path": "../../../packages/handler"
+		},
+		{
+			"path": "../../../packages/handler-aws"
+		},
+		{
+			"path": "../../../packages/handler-graphql-playground"
+		},
+		{
+			"path": "../../../packages/project-utils"
+		}
+	]
 }
