--- a/packages/api-cookie-policy/tsconfig.build.json
+++ b/packages/api-cookie-policy/tsconfig.build.json
@@ -18,6 +18,7 @@
     { "path": "../api-security/tsconfig.build.json" },
     { "path": "../api-settings-manager/tsconfig.build.json" },
     { "path": "../commodo-graphql/tsconfig.build.json" },
+    { "path": "../commodo/tsconfig.build.json" },
     { "path": "../validation/tsconfig.build.json" }
   ]
 }
