--- a/packages/api-plugin-elastic-search-client/tsconfig.build.json
+++ b/packages/api-plugin-elastic-search-client/tsconfig.build.json
@@ -5,10 +5,6 @@
     "outDir": "./dist",
     "declarationDir": "./dist"
   },
-  "exclude": ["node_modules", "dist", "../graphql", "../handler", "../handler-client"],
-  "references": [
-    { "path": "../handler/tsconfig.build.json" },
-    { "path": "../handler-client/tsconfig.build.json" },
-    { "path": "../graphql/tsconfig.build.json" }
-  ]
+  "exclude": ["node_modules", "dist", "../handler"],
+  "references": [{ "path": "../handler/tsconfig.build.json" }]
 }
