--- a/packages/api-plugin-elastic-search-client/tsconfig.json
+++ b/packages/api-plugin-elastic-search-client/tsconfig.json
@@ -1,8 +1,4 @@
 {
   "extends": "../../tsconfig",
-  "references": [
-    { "path": "../handler" },
-    { "path": "../handler-client" },
-    { "path": "../graphql" }
-  ]
+  "references": [{ "path": "../handler" }]
 }
