--- a/packages/app-file-manager/tsconfig.json
+++ b/packages/app-file-manager/tsconfig.json
@@ -1,14 +1,29 @@
 {
   "extends": "../../tsconfig",
   "references": [
-    { "path": "../app-admin" },
-    { "path": "../app-security" },
-    { "path": "../app-security-user-management" },
-    { "path": "../app-page-builder" },
-    { "path": "../form" },
-    { "path": "../plugins" },
-    { "path": "../react-router" },
-    { "path": "../validation" },
-    { "path": "../ui" }
+    {
+      "path": "../app-admin"
+    },
+    {
+      "path": "../app-security"
+    },
+    {
+      "path": "../app-security-user-management"
+    },
+    {
+      "path": "../form"
+    },
+    {
+      "path": "../plugins"
+    },
+    {
+      "path": "../react-router"
+    },
+    {
+      "path": "../ui"
+    },
+    {
+      "path": "../app"
+    }
   ]
 }
