--- a/packages/app-form-builder/tsconfig.json
+++ b/packages/app-form-builder/tsconfig.json
@@ -1,9 +1,41 @@
 {
-  "extends": "../../tsconfig",
-  "references": [
-    { "path": "../form" },
-    { "path": "../app-i18n" },
-    { "path": "../app-page-builder" },
-    { "path": "../app-plugin-admin-welcome-screen" }
-  ]
+	"extends": "../../tsconfig",
+	"references": [
+		{
+			"path": "../form"
+		},
+		{
+			"path": "../app-i18n"
+		},
+		{
+			"path": "../app-page-builder"
+		},
+		{
+			"path": "../app-plugin-admin-welcome-screen"
+		},
+		{
+			"path": "../app"
+		},
+		{
+			"path": "../app-admin"
+		},
+		{
+			"path": "../app-security"
+		},
+		{
+			"path": "../app-security-user-management"
+		},
+		{
+			"path": "../plugins"
+		},
+		{
+			"path": "../react-router"
+		},
+		{
+			"path": "../ui"
+		},
+		{
+			"path": "../validation"
+		}
+	]
 }
