--- a/packages/app-i18n-content/tsconfig.json
+++ b/packages/app-i18n-content/tsconfig.json
@@ -1,17 +1,20 @@
 {
-	"extends": "../../tsconfig.json",
-	"references": [
-		{
-			"path": "../app"
-		},
-		{
-			"path": "../app-i18n"
-		},
-		{
-			"path": "../app-admin"
-		},
-		{
-			"path": "../form"
-		}
-	]
+  "extends": "../../tsconfig.json",
+  "references": [
+    {
+      "path": "../app"
+    },
+    {
+      "path": "../app-i18n"
+    },
+    {
+      "path": "../app-admin"
+    },
+    {
+      "path": "../form"
+    },
+    {
+      "path": "../ui"
+    }
+  ]
 }
