--- a/packages/app-page-builder/tsconfig.json
+++ b/packages/app-page-builder/tsconfig.json
@@ -1,15 +1,41 @@
 {
-  "extends": "../../tsconfig",
-  "references": [
-    { "path": "../app" },
-    { "path": "../app-admin" },
-    { "path": "../app-plugin-admin-welcome-screen" },
-    { "path": "../app-template" },
-    { "path": "../app-security" },
-    { "path": "../app-security-user-management" },
-    { "path": "../form" },
-    { "path": "../plugins" },
-    { "path": "../react-router" },
-    { "path": "../ui" }
-  ]
+	"extends": "../../tsconfig",
+	"references": [
+		{
+			"path": "../app"
+		},
+		{
+			"path": "../app-admin"
+		},
+		{
+			"path": "../app-plugin-admin-welcome-screen"
+		},
+		{
+			"path": "../app-template"
+		},
+		{
+			"path": "../app-security"
+		},
+		{
+			"path": "../app-security-user-management"
+		},
+		{
+			"path": "../form"
+		},
+		{
+			"path": "../plugins"
+		},
+		{
+			"path": "../react-router"
+		},
+		{
+			"path": "../ui"
+		},
+		{
+			"path": "../tracking"
+		},
+		{
+			"path": "../validation"
+		}
+	]
 }
