--- a/packages/handler-apollo-gateway/tsconfig.json
+++ b/packages/handler-apollo-gateway/tsconfig.json
@@ -1,10 +1,23 @@
 {
-  "extends": "../../tsconfig",
-  "references": [
-    { "path": "../graphql" },
-    { "path": "../handler" },
-    { "path": "../handler-args" },
-    { "path": "../handler-client" },
-    { "path": "../handler-http" }
-  ]
+	"extends": "../../tsconfig",
+	"references": [
+		{
+			"path": "../graphql"
+		},
+		{
+			"path": "../handler"
+		},
+		{
+			"path": "../handler-args"
+		},
+		{
+			"path": "../handler-client"
+		},
+		{
+			"path": "../handler-http"
+		},
+		{
+			"path": "../plugins"
+		}
+	]
 }
