--- a/packages/handler-graphql-playground/tsconfig.json
+++ b/packages/handler-graphql-playground/tsconfig.json
@@ -1,4 +1,11 @@
 {
-  "extends": "../../tsconfig",
-  "references": [{ "path": "../handler" }, { "path": "../graphql" }]
+	"extends": "../../tsconfig",
+	"references": [
+		{
+			"path": "../handler"
+		},
+		{
+			"path": "../handler-http"
+		}
+	]
 }
