--- a/packages/api-file-manager/tsconfig.build.json
+++ b/packages/api-file-manager/tsconfig.build.json
@@ -5,13 +5,13 @@
     "node_modules",
     "./dist",
     "../api-security",
-    "../commodo",
     "../commodo-graphql",
     "../graphql",
     "../handler",
     "../handler-client",
     "../handler-db",
-    "../validation"
+    "../validation",
+    "../project-utils"
   ],
   "compilerOptions": {
     "rootDir": "./src",
@@ -19,13 +19,29 @@
     "declarationDir": "./dist"
   },
   "references": [
-    { "path": "../api-security/tsconfig.build.json" },
-    { "path": "../commodo/tsconfig.build.json" },
-    { "path": "../commodo-graphql/tsconfig.build.json" },
-    { "path": "../graphql/tsconfig.build.json" },
-    { "path": "../handler/tsconfig.build.json" },
-    { "path": "../handler-client/tsconfig.build.json" },
-    { "path": "../handler-db/tsconfig.build.json" },
-    { "path": "../validation/tsconfig.build.json" }
+    {
+      "path": "../api-security/tsconfig.build.json"
+    },
+    {
+      "path": "../commodo-graphql/tsconfig.build.json"
+    },
+    {
+      "path": "../graphql/tsconfig.build.json"
+    },
+    {
+      "path": "../handler/tsconfig.build.json"
+    },
+    {
+      "path": "../handler-client/tsconfig.build.json"
+    },
+    {
+      "path": "../handler-db/tsconfig.build.json"
+    },
+    {
+      "path": "../validation/tsconfig.build.json"
+    },
+    {
+      "path": "../project-utils/tsconfig.build.json"
+    }
   ]
 }
