--- a/packages/api-google-tag-manager/tsconfig.build.json
+++ b/packages/api-google-tag-manager/tsconfig.build.json
@@ -1,22 +1,37 @@
 {
-  "extends": "../../tsconfig.build.json",
-  "include": ["./src"],
-  "exclude": [
-    "node_modules",
-    "./dist",
-    "../api-security",
-    "../api-settings-manager",
-    "../commodo",
-    "../commodo-graphql"
-  ],
-  "compilerOptions": {
-    "rootDir": "./src",
-    "outDir": "./dist",
-    "declarationDir": "./dist"
-  },
-  "references": [
-    { "path": "../api-security/tsconfig.build.json" },
-    { "path": "../api-settings-manager/tsconfig.build.json" },
-    { "path": "../commodo-graphql/tsconfig.build.json" }
-  ]
+	"extends": "../../tsconfig.build.json",
+	"include": [
+		"./src"
+	],
+	"exclude": [
+		"node_modules",
+		"./dist",
+		"../api-security",
+		"../api-settings-manager",
+		"../commodo",
+		"../commodo-graphql",
+		"../graphql"
+	],
+	"compilerOptions": {
+		"rootDir": "./src",
+		"outDir": "./dist",
+		"declarationDir": "./dist"
+	},
+	"references": [
+		{
+			"path": "../api-security/tsconfig.build.json"
+		},
+		{
+			"path": "../api-settings-manager/tsconfig.build.json"
+		},
+		{
+			"path": "../commodo-graphql/tsconfig.build.json"
+		},
+		{
+			"path": "../commodo/tsconfig.build.json"
+		},
+		{
+			"path": "../graphql/tsconfig.build.json"
+		}
+	]
 }
