--- a/packages/api-mailchimp/tsconfig.json
+++ b/packages/api-mailchimp/tsconfig.json
@@ -1,10 +1,20 @@
 {
-  "extends": "../../tsconfig",
-  "references": [
-    { "path": "../graphql" },
-    { "path": "../api-security" },
-    { "path": "../api-settings-manager" },
-    { "path": "../commodo" },
-    { "path": "../commodo-graphql" }
-  ]
+	"extends": "../../tsconfig",
+	"references": [
+		{
+			"path": "../graphql"
+		},
+		{
+			"path": "../api-security"
+		},
+		{
+			"path": "../api-settings-manager"
+		},
+		{
+			"path": "../commodo"
+		},
+		{
+			"path": "../commodo-graphql"
+		}
+	]
 }
