--- a/packages/api-security/tsconfig.build.json
+++ b/packages/api-security/tsconfig.build.json
@@ -1,22 +1,21 @@
 {
   "extends": "../../tsconfig.build.json",
   "include": ["./src"],
-  "exclude": [
-    "node_modules",
-    "./dist",
-    "../graphql",
-    "../commodo",
-    "../commodo-graphql",
-    "../validation"
-  ],
+  "exclude": ["node_modules", "./dist", "../graphql", "../handler", "../handler-apollo-server"],
   "compilerOptions": {
     "rootDir": "./src",
     "outDir": "./dist",
     "declarationDir": "./dist"
   },
   "references": [
-    { "path": "../graphql/tsconfig.build.json" },
-    { "path": "../commodo-graphql/tsconfig.build.json" },
-    { "path": "../validation/tsconfig.build.json" }
+    {
+      "path": "../graphql/tsconfig.build.json"
+    },
+    {
+      "path": "../handler/tsconfig.build.json"
+    },
+    {
+      "path": "../handler-apollo-server/tsconfig.build.json"
+    }
   ]
 }
