--- a/packages/app-google-tag-manager/tsconfig.build.json
+++ b/packages/app-google-tag-manager/tsconfig.build.json
@@ -8,8 +8,8 @@
     "../app-page-builder",
     "../form",
     "../react-router",
-    "../validation",
-    "../ui"
+    "../ui",
+    "../app"
   ],
   "compilerOptions": {
     "rootDir": "./src",
@@ -17,12 +17,26 @@
     "declarationDir": "./dist"
   },
   "references": [
-    { "path": "../app-admin/tsconfig.build.json" },
-    { "path": "../app-security/tsconfig.build.json" },
-    { "path": "../app-page-builder/tsconfig.build.json" },
-    { "path": "../form/tsconfig.build.json" },
-    { "path": "../react-router/tsconfig.build.json" },
-    { "path": "../validation/tsconfig.build.json" },
-    { "path": "../ui/tsconfig.build.json" }
+    {
+      "path": "../app-admin/tsconfig.build.json"
+    },
+    {
+      "path": "../app-security/tsconfig.build.json"
+    },
+    {
+      "path": "../app-page-builder/tsconfig.build.json"
+    },
+    {
+      "path": "../form/tsconfig.build.json"
+    },
+    {
+      "path": "../react-router/tsconfig.build.json"
+    },
+    {
+      "path": "../ui/tsconfig.build.json"
+    },
+    {
+      "path": "../app/tsconfig.build.json"
+    }
   ]
 }
