--- a/packages/app-google-tag-manager/tsconfig.json
+++ b/packages/app-google-tag-manager/tsconfig.json
@@ -1,12 +1,26 @@
 {
-  "extends": "../../tsconfig",
-  "references": [
-    { "path": "../app-admin" },
-    { "path": "../app-security" },
-    { "path": "../app-page-builder" },
-    { "path": "../form" },
-    { "path": "../react-router" },
-    { "path": "../validation" },
-    { "path": "../ui" }
-  ]
+	"extends": "../../tsconfig",
+	"references": [
+		{
+			"path": "../app-admin"
+		},
+		{
+			"path": "../app-security"
+		},
+		{
+			"path": "../app-page-builder"
+		},
+		{
+			"path": "../form"
+		},
+		{
+			"path": "../react-router"
+		},
+		{
+			"path": "../ui"
+		},
+		{
+			"path": "../app"
+		}
+	]
 }
