--- a/packages/app-mailchimp/tsconfig.build.json
+++ b/packages/app-mailchimp/tsconfig.build.json
@@ -1,28 +1,52 @@
 {
-  "extends": "../../tsconfig.build.json",
-  "include": ["./src"],
-  "exclude": [
-    "node_modules",
-    "../app-admin",
-    "../app-security",
-    "../app-page-builder",
-    "../form",
-    "../react-router",
-    "../validation",
-    "../ui"
-  ],
-  "compilerOptions": {
-    "rootDir": "./src",
-    "outDir": "./dist",
-    "declarationDir": "./dist"
-  },
-  "references": [
-    { "path": "../app-admin/tsconfig.build.json" },
-    { "path": "../app-security/tsconfig.build.json" },
-    { "path": "../app-page-builder/tsconfig.build.json" },
-    { "path": "../form/tsconfig.build.json" },
-    { "path": "../react-router/tsconfig.build.json" },
-    { "path": "../validation/tsconfig.build.json" },
-    { "path": "../ui/tsconfig.build.json" }
-  ]
+	"extends": "../../tsconfig.build.json",
+	"include": [
+		"./src"
+	],
+	"exclude": [
+		"node_modules",
+		"../app-admin",
+		"../app-security",
+		"../app-page-builder",
+		"../form",
+		"../react-router",
+		"../validation",
+		"../ui",
+		"../app",
+		"../plugins"
+	],
+	"compilerOptions": {
+		"rootDir": "./src",
+		"outDir": "./dist",
+		"declarationDir": "./dist"
+	},
+	"references": [
+		{
+			"path": "../app-admin/tsconfig.build.json"
+		},
+		{
+			"path": "../app-security/tsconfig.build.json"
+		},
+		{
+			"path": "../app-page-builder/tsconfig.build.json"
+		},
+		{
+			"path": "../form/tsconfig.build.json"
+		},
+		{
+			"path": "../react-router/tsconfig.build.json"
+		},
+		{
+			"path": "../validation/tsconfig.build.json"
+		},
+		{
+			"path": "../ui/tsconfig.build.json"
+		},
+		{
+			"path": "../app/tsconfig.build.json"
+		},
+		{
+			"path": "../plugins/tsconfig.build.json"
+		}
+	]
 }
