--- a/packages/app-security/tsconfig.build.json
+++ b/packages/app-security/tsconfig.build.json
@@ -6,12 +6,9 @@
     "**/__tests__/**",
     "./dist",
     "../app",
-    "../app-admin",
-    "../form",
     "../plugins",
     "../react-router",
-    "../ui",
-    "../validation"
+    "../ui"
   ],
   "compilerOptions": {
     "rootDir": "./src",
@@ -20,11 +17,8 @@
   },
   "references": [
     { "path": "../app/tsconfig.build.json" },
-    { "path": "../app-admin/tsconfig.build.json" },
-    { "path": "../form/tsconfig.build.json" },
     { "path": "../plugins/tsconfig.build.json" },
     { "path": "../react-router/tsconfig.build.json" },
-    { "path": "../ui/tsconfig.build.json" },
-    { "path": "../validation/tsconfig.build.json" }
+    { "path": "../ui/tsconfig.build.json" }
   ]
 }
