--- a/packages/app-security/tsconfig.json
+++ b/packages/app-security/tsconfig.json
@@ -2,11 +2,8 @@
   "extends": "../../tsconfig.json",
   "references": [
     { "path": "../app" },
-    { "path": "../app-admin" },
-    { "path": "../form" },
     { "path": "../plugins" },
     { "path": "../react-router" },
-    { "path": "../ui" },
-    { "path": "../validation" }
+    { "path": "../ui" }
   ]
 }
