--- a/packages/app-template-site/tsconfig.json
+++ b/packages/app-template-site/tsconfig.json
@@ -1,16 +1,41 @@
 {
-  "extends": "../../tsconfig",
-  "references": [
-    { "path": "../app" },
-    { "path": "../app-i18n" },
-    { "path": "../app-template" },
-    { "path": "../app-cookie-policy" },
-    { "path": "../app-google-tag-manager" },
-    { "path": "../app-mailchimp" },
-    { "path": "../app-typeform" },
-    { "path": "../app-page-builder" },
-    { "path": "../app-page-builder-theme" },
-    { "path": "../app-form-builder" },
-    { "path": "../app-form-builder-theme" }
-  ]
+	"extends": "../../tsconfig",
+	"references": [
+		{
+			"path": "../app"
+		},
+		{
+			"path": "../app-i18n"
+		},
+		{
+			"path": "../app-template"
+		},
+		{
+			"path": "../app-cookie-policy"
+		},
+		{
+			"path": "../app-google-tag-manager"
+		},
+		{
+			"path": "../app-mailchimp"
+		},
+		{
+			"path": "../app-typeform"
+		},
+		{
+			"path": "../app-page-builder"
+		},
+		{
+			"path": "../app-page-builder-theme"
+		},
+		{
+			"path": "../app-form-builder"
+		},
+		{
+			"path": "../app-form-builder-theme"
+		},
+		{
+			"path": "../react-router"
+		}
+	]
 }
