--- a/packages/app-typeform/tsconfig.json
+++ b/packages/app-typeform/tsconfig.json
@@ -1,11 +1,17 @@
 {
   "extends": "../../tsconfig",
   "references": [
-    { "path": "../app-admin" },
-    { "path": "../app-security" },
-    { "path": "../app-page-builder" },
-    { "path": "../form" },
-    { "path": "../validation" },
-    { "path": "../ui" }
+    {
+      "path": "../app-page-builder"
+    },
+    {
+      "path": "../validation"
+    },
+    {
+      "path": "../ui"
+    },
+    {
+      "path": "../app"
+    }
   ]
 }
