--- a/packages/handler-graphql-playground/tsconfig.build.json
+++ b/packages/handler-graphql-playground/tsconfig.build.json
@@ -1,15 +1,18 @@
 {
   "extends": "../../tsconfig.build.json",
   "include": ["./src"],
-  "exclude": ["node_modules", "./dist", "../handler", "../handler-http" ,"../graphql"],
+  "exclude": ["node_modules", "./dist", "../handler", "../handler-http"],
   "compilerOptions": {
     "rootDir": "./src",
     "outDir": "./dist",
     "declarationDir": "./dist"
   },
   "references": [
-    { "path": "../handler/tsconfig.build.json" },
-    { "path": "../handler-http/tsconfig.build.json" },
-    { "path": "../graphql/tsconfig.build.json" }
+    {
+      "path": "../handler/tsconfig.build.json"
+    },
+    {
+      "path": "../handler-http/tsconfig.build.json"
+    }
   ]
 }
