fix(api-file-manager): update package dependency

--- a/packages/api-file-manager/package.json
+++ b/packages/api-file-manager/package.json
@@ -18,8 +18,8 @@
     "@babel/runtime": "^7.5.5",
     "@commodo/fields": "beta",
     "@ramda/pipe": "^0.26.1",
+    "@webiny/api-i18n-content": "^4.13.0",
     "@webiny/api-security": "^4.13.0",
-    "@webiny/commodo-graphql": "^4.13.0",
     "@webiny/graphql": "^4.13.0",
     "@webiny/handler": "^4.13.0",
     "@webiny/handler-db": "^4.13.0",
