--- a/packages/app-page-builder/package.json
+++ b/packages/app-page-builder/package.json
@@ -46,6 +46,7 @@
     "lodash.get": "^4.4.2",
     "lodash.pick": "^4.4.0",
     "lorem-ipsum": "^1.0.5",
+    "object.pick": "^1.3.0",
     "platform": "^1.3.5",
     "react-apollo": "^3.1.3",
     "react-color": "^2.14.1",
