--- a/packages/app-i18n-content/tsconfig.json
+++ b/packages/app-i18n-content/tsconfig.json
@@ -15,6 +15,12 @@
     },
     {
       "path": "../ui"
+    },
+    {
+      "path": "../react-router"
+    },
+    {
+      "path": "../plugins"
     }
   ]
 }
