--- a/apps/admin/code/package.json
+++ b/apps/admin/code/package.json
@@ -8,8 +8,43 @@
 		"@editorjs/list": "^1.6.0",
 		"@editorjs/underline": "^1.0.0",
 		"@editorjs/quote": "^2.4.0",
+		"@emotion/styled": "^10.0.17",
+		"@webiny/app": "^4.13.0",
+		"@webiny/app-admin": "^4.13.0",
+		"@webiny/app-file-manager": "^4.13.0",
+		"@webiny/app-headless-cms": "^4.13.0",
+		"@webiny/app-i18n-content": "^4.13.0",
+		"@webiny/app-plugin-admin-welcome-screen": "^4.13.0",
+		"@webiny/app-plugin-security-cognito": "^4.13.0",
+		"@webiny/app-security": "^4.13.0",
+		"@webiny/app-page-builder": "^4.13.0",
+		"@webiny/app-cookie-policy": "^4.13.0",
+		"@webiny/app-typeform": "^4.13.0",
+		"@webiny/app-mailchimp": "^4.13.0",
+		"@webiny/app-security-user-management": "^4.13.0",
+		"@webiny/app-google-tag-manager": "^4.13.0",
+		"@webiny/app-i18n": "^4.13.0",
+		"@webiny/app-form-builder": "^4.13.0",
+		"@webiny/plugins": "^4.13.0",
+		"@webiny/project-utils": "^4.13.0",
+		"@webiny/react-router": "^4.13.0",
+		"@webiny/cli-plugin-deploy-pulumi": "^4.13.0",
+		"@webiny/ui": "^4.13.0",
+		"@webiny/tracking": "^4.13.0",
+		"apollo-client": "^2.2.8",
+		"apollo-link": "^1.2.14",
+		"apollo-link-batch-http": "^1.2.14",
+		"apollo-link-error": "^1.1.13",
+		"apollo-cache-inmemory": "^1.6.6",
+		"core-js": "^3.0.1",
+		"cross-fetch": "^3.0.4",
+		"emotion": "^10.0.17",
+		"graphql-tag": "^2.10.1",
+		"theme": "^0.1.0",
 		"react": "^16.13.1",
-		"react-dom": "^16.13.1"
+		"react-apollo": "^3.1.0",
+		"react-dom": "^16.13.1",
+		"regenerator-runtime": "^0.13.5"
 	},
 	"devDependencies": {
 		"env-cmd": "^10.1.0",
