--- a/apps/admin/code/tsconfig.json
+++ b/apps/admin/code/tsconfig.json
@@ -69,6 +69,9 @@
     },
     {
       "path": "../../../packages/app-security"
+    },
+    {
+      "path": "../../../packages/tracking"
     }
   ],
   "include": ["src"],
