--- a/packages/handler-client/tsconfig.build.json
+++ b/packages/handler-client/tsconfig.build.json
@@ -9,6 +9,6 @@
   },
   "references": [
     { "path": "../handler/tsconfig.build.json" },
-    { "path": "../plugins/tsconfig.build.json" },
+    { "path": "../plugins/tsconfig.build.json" }
   ]
 }
