--- a/packages/cwp-template-full/template/apps/databaseProxy/package.json
+++ b/packages/cwp-template-full/template/apps/databaseProxy/package.json
@@ -5,6 +5,6 @@
     "build": "webiny run build"
   },
   "dependencies": {
-    "@webiny/handler": "^4.0.0-beta.0",
+    "@webiny/handler": "^4.0.0-beta.0"
   }
 }
