fix: migrate to `jest-dynalite` for DynamoDB tests

--- a/packages/api-security-user-management/package.json
+++ b/packages/api-security-user-management/package.json
@@ -29,8 +29,7 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
-    "@babel/core": "^7.5.5",
-    "@shelf/jest-dynamodb": "^1.7.0"
+    "@babel/core": "^7.5.5"
   },
   "publishConfig": {
     "access": "public",
