--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "@babel/core": "^7.0.0",
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
-    "@shelf/jest-mongodb": "^1.1.0",
     "@testing-library/cypress": "^5.0.2",
     "@types/fs-extra": "^8.0.1",
     "@types/jest": "^24.0.24",
@@ -83,6 +82,7 @@
     "inquirer-checkbox-plus-prompt": "^1.0.1",
     "inquirer-maxlength-input-prompt": "^1.0.0",
     "jest": "^24.9.0",
+    "jest-dynalite": "^3.0.0",
     "jest-extended": "^0.11.2",
     "lerna": "^3.21.0",
     "lint-staged": "^7.2.2",
