--- a/packages/api-file-manager/package.json
+++ b/packages/api-file-manager/package.json
@@ -43,8 +43,7 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-typescript": "^7.0.0",
     "@elastic/elasticsearch": "^7.9.1",
-    "@elastic/elasticsearch-mock": "0.3.0",
-    "@shelf/jest-dynamodb": "^1.7.0"
+    "@elastic/elasticsearch-mock": "0.3.0"
   },
   "optionalDependencies": {
     "fsevents": "^2.1.3"
