--- a/packages/api-i18n/package.json
+++ b/packages/api-i18n/package.json
@@ -32,8 +32,7 @@
     "@babel/cli": "^7.5.5",
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
-    "@babel/preset-typescript": "^7.8.3",
-    "@shelf/jest-dynamodb": "^1.7.0"
+    "@babel/preset-typescript": "^7.8.3"
   },
   "optionalDependencies": {
     "fsevents": "^2.1.3"
